--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Syte By Zemlyakov</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stls.css">
+    <link rel="stylesheet" href="styles.css">
    <link rel="shortcut icon" href="https://v.od.ua/uploads/92/logo.png" type="image.png">
   </head>
 
